tests/snapshots/examples_fixtures/Modules__script_use_myfile.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/script_use_myfile.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `Modules.Data.MyFile` to import.

  --> examples/Modules/script_use_myfile.flx:1:1
  |
1 | import Modules.Data.MyFile
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Data.MyFile.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Data.MyFile` under roots: examples/Modules, src (imported from examples/Modules/script_use_myfile.flx).
== stdout ==
<not executed>
